For real. Hide tagline only on subpages for mobile

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
   Designer &amp; Developer
   </span>
   
-  <p class="font-size-4 font-weight-3 my4 center-block sm-hide" style="max-width: 18rem">
+  <p class="sm-header-tagline font-size-4 font-weight-3 my4 center-block" style="max-width: 18rem">
     Passionate about creating<br /> digital products—obsessed with simplicity &amp; performance.
   </p>
 
