--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -3,18 +3,18 @@ layout: default
 ---
 <article class="site-project lg-post lg-height-full" itemscope itemtype="http://schema.org/BlogPosting">
 
-  <header class="align-center color-white px3 py5" style="background: linear-gradient( rgba({{ page.color }}, 0.94), rgba({{ page.color }}, 0.94)), url({{ page.cover-image }}); background-size: cover; background-position: center center;">
+  <header class="align-center color-white text-shadow-medium px3 py5" style="background: linear-gradient( rgba({{ page.color }}, 0.94), rgba({{ page.color }}, 0.94)), url({{ page.cover-image }}); background-size: cover; background-position: center center;">
 
       <a href="{{ site.baseurl }}/" class="lg-absolute l1 t1 sm-hide inline-block color-white dim-bg-black underline-none lowercase py1 px3 m2 br3">&larr; All Work</a>
 
-      <div onclick="window.history.back()" id="close-post" class="absolute t0 r0 hide inline-block line-height-none dim-color-white p3 pointer">
+      <div onclick="window.history.back()" id="close-post" class="absolute t0 r0 hide line-height-none dim-color-white svg-shadow-medium p3 pointer">
           <svg viewBox="0 0 32 32" width="24" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="8%">
               <title>All Work</title>
               <path d="M2 30 L30 2 M30 30 L2 2" />
           </svg>
       </div>
 
-      <div class="center-block line-height-none text-shadow-medium pt3">
+      <div class="center-block line-height-none pt3">
         <h1 class="font-size-1" itemprop="name headline">{{ page.title }}</h1>
         <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished" class="block font-size-6 line-height-title tracking-wide opacity-8 py2">{{ page.year }}</time>
         <span class="font-size-5 line-height-title tracking-slight font-weight-5">{{ page.tagline }}</span>
