Fix spacing on the titles

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,7 +8,7 @@ layout: default
   <article class="lg-article lg-height-full lg-align-middle pt3 px3 pb5">
     <section class="lg-section center-block" style="max-width: 34rem">
 
-    <h1 class="font-size-1 pt2">{{ page.title }}</h1>
+    <h1 class="font-size-1 line-height-none pt3">{{ page.title }}</h1>
     <div class="post-content">
         {{ content }}
     </div>
