--- a/css/main.scss
+++ b/css/main.scss
@@ -48,6 +48,13 @@
 .notouch .article-link:hover { padding-left: 0.5rem }
 
 
+// Contact Form
+.contact-form input,
+.contact-form textarea { border: 2px solid #ddd }
+
+.contact-form input:focus,
+.contact-form textarea:focus { border: 2px solid #3498db }
+
 // Custom Properties
 p a { color: #3498db }
 p strong { font-weight: 600 }
