Use config variable for contact email address

--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -5,7 +5,7 @@
     }
 </script>
 
-<form method="POST" action="https://formspree.io/&#109;&#97;&#105;&#108;&#109;&#97;&#110;&#64;&#100;&#97;&#110;&#107;&#108;&#97;&#109;&#109;&#101;&#114;&#46;&#99;&#111;&#109;" class="contact-form relative clearfix" style="margin: 0 -0.5rem">
+<form method="POST" action="https://formspree.io/{{ site.contact_email }}" class="contact-form relative clearfix" style="margin: 0 -0.5rem">
     
     <div class="inline-block width-full lg-width-50 p2">
         <input type="text" name="name" placeholder="Your name" onblur="passName(this.value)" required class="width-full p2 br3">
