Update Tinyset to include focus states for .dim and active pressable state

--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -23,6 +23,6 @@
     <input type="hidden" name="_format" value="plain" />
     <input type="hidden" name="_next" value="/thanks/" />
 
-    <button type="submit" value="Send" class="color-white bg-blue py1 px3 mx2 br3 right" tabindex="4">Submit</button>
+    <button type="submit" value="Send" class="color-white bg-blue right py1 px3 mx2 br3 dim pointer pressable" tabindex="4">Submit</button>
 
 </form>
