Add Twitter icon link in the header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,4 +18,6 @@
     Passionate about creating<br /> digital products—obsessed with simplicity &amp; performance.
   </p>
 
+  {% include icon-twitter.html username="danklammer" %}
+
 </header>
