--- a/_includes/icon-twitter.html
+++ b/_includes/icon-twitter.html
@@ -1,1 +1,3 @@
-<a href="https://twitter.com/{{ include.username }}"><span class="icon icon--twitter">{% include icon-twitter.svg %}</span><span class="username">{{ include.username }}</span></a>
+<div class="lg-absolute l0 b3 width-full align-center p3">
+    <a href="https://twitter.com/{{ include.username }}" title="@{{ include.username }} on Twitter" class="inline-block align-center p1" >{% include icon-twitter.svg %}</a>
+</div>
