--- a/_includes/icon-twitter.html
+++ b/_includes/icon-twitter.html
@@ -1,3 +1,3 @@
-<div class="lg-absolute l0 b3 width-full align-center p3">
-    <a href="https://twitter.com/{{ include.username }}" title="@{{ include.username }} on Twitter" class="inline-block align-center p1" >{% include icon-twitter.svg %}</a>
+<div class="lg-absolute l0 b3 width-full align-center pt4" style="color: rgba(29, 161, 242, 1);">
+    <a href="https://twitter.com/{{ include.username }}" title="@{{ include.username }} on Twitter" class="social-link inline-block align-center p1" style="-webkit-filter: drop-shadow(-1px -1px 0 rgba(255, 255, 255, .12)); filter: drop-shadow(-1px -1px 0 rgba(255, 255, 255, .12))">{% include icon-twitter.svg %}</a>
 </div>
