Make the behind the scenes bg-slate

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="site-page lg-page lg-height-full">
+<div class="site-page lg-page lg-height-full bg-white">
 
   {% include nav.html %}
 
