--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<article class="site-project lg-post lg-height-full" itemscope itemtype="http://schema.org/BlogPosting">
+<article class="site-project lg-post lg-height-full bg-white" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="align-center color-white text-shadow-medium px3 py5" style="background: linear-gradient( rgba({{ page.color }}, 0.94), rgba({{ page.color }}, 0.94)), url({{ page.cover-image }}); background-size: cover; background-position: center center;">
 
