--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@ layout: compress
 
   {% include head.html %}
 
-  <body class="font-avenir bg-slate color-gray line-height-default">
+  <body class="font-avenir color-gray line-height-default">
       {{ content }}
   </body>
 
