--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 ---
-<div class="site-page lg-page lg-height-full bg-white">
+
+<div class="site-page lg-page lg-height-full">
 
   {% include nav.html %}
 
