Use .post-content class as the parent

--- a/css/main.scss
+++ b/css/main.scss
@@ -60,9 +60,9 @@
 
 
 // Custom Properties
-p a { color: #3498db }
-p strong { font-weight: 600 }
-p img { border-radius: .25rem }
+.post-content a { color: #3498db }
+.post-content strong { font-weight: 600 }
+.post-content img { border-radius: .25rem }
 
 .icon svg { width: 16px }
 
