--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,7 @@
 
   <title>{% if page.title %}{{ page.title | escape }} &mdash; {{ site.title }}{% else %}{{ site.title | escape }} &mdash; {{ site.description }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.tagline }}{% endif %}">
+  <meta name="author" content="{{ site.title }}">
 
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="{{ site.title }}">
