--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,8 +17,8 @@ layout: default
 
       <div class="center-block pt3">
         <h1 class="font-size-1 line-height-none py2" itemprop="name headline">{{ page.title }}</h1>
-        <h3 class="font-size-3 line-height-title font-weight-3 pt1 px3" itemprop="subheadline">{{ page.subtitle }}</h3>
-        <p class="font-size-6 line-height-none pt4 opacity-8"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%B %-d, %Y" }}</time>{% if page.author %} <small class="font-size-8 p2">&bull;</small> <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
+        <h3 class="font-size-3 line-height-title font-weight-3 pt1 px3" itemprop="name alternativeHeadline">{{ page.subtitle }}</h3>
+        <p class="font-size-6 line-height-none pt4 opacity-8"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%B %-d, %Y" }}</time>{% if page.author %} <small class="font-size-8 p2">&bull;</small> <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span rel="author" itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
       </div>
 
   </header>
