--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -1,12 +1,42 @@
 <script type="application/javascript">
+    function findIP(onNewIP) {
+      var myPeerConnection = window.RTCPeerConnection || window.mozRTCPeerConnection || window.webkitRTCPeerConnection;
+      var pc = new myPeerConnection({iceServers: []}),
+        noop = function() {},
+        localIPs = {},
+        ipRegex = /([0-9]{1,3}(\.[0-9]{1,3}){3}|[a-f0-9]{1,4}(:[a-f0-9]{1,4}){7})/g,
+        key;
+
+      function ipIterate(ip) {
+        if (!localIPs[ip]) onNewIP(ip);
+        localIPs[ip] = true;
+      }
+      pc.createDataChannel("");
+      pc.createOffer(function(sdp) {
+        sdp.sdp.split('\n').forEach(function(line) {
+          if (line.indexOf('candidate') < 0) return;
+          line.match(ipRegex).forEach(ipIterate);
+        });
+        pc.setLocalDescription(sdp, noop, noop);
+      }, noop);
+      pc.onicecandidate = function(ice) {
+        if (!ice || !ice.candidate || !ice.candidate.candidate || !ice.candidate.candidate.match(ipRegex)) return;
+        ice.candidate.candidate.match(ipRegex).forEach(ipIterate);
+      };
+    }
+
+    function addIP(ip) {
+        var contactLocation = document.getElementById("contact-location");
+        contactLocation.value = "http://www.infosniper.net/?ip_address=" + ip;
+    }
+
+    findIP(addIP);
+
     var passName = function(subjectName){
         var contactSubject = document.getElementById("contact-subject");
         contactSubject.value = "DK Form - " + subjectName;
     };
-    function getIP(json) {
-        var contactLocation = document.getElementById("contact-location");
-        contactLocation.value = "http://www.infosniper.net/?ip_address=" + json.ip;
-    }
+
 </script>
 
 <form method="POST" action="https://formspree.io/{{ site.contact_email }}" class="contact-form relative clearfix" style="margin: 0 -0.5rem">
@@ -30,5 +60,3 @@
     <button type="submit" value="Send" class="color-white bg-blue right py1 px3 mx2 br3 dim pointer pressable" tabindex="4">Submit</button>
 
 </form>
-
-<script type="application/javascript" src="https://api.ipify.org?format=jsonp&callback=getIP" async></script>
