Fix confirmation pathing

--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -55,7 +55,7 @@
     <input type="text" name="_gotcha" class="hide" />
     <input type="hidden" name="location" id="contact-location">
     <input type="hidden" name="_subject" id="contact-subject" value="DK Form - " />
-    <input type="hidden" name="_next" value="//contact/thanks/" />
+    <input type="hidden" name="_next" value="/contact/thanks/" />
 
     <button type="submit" value="Send" class="color-white bg-blue right py1 px3 mx2 br3 dim pointer pressable" tabindex="4">Submit</button>
 
