--- a/css/main.scss
+++ b/css/main.scss
@@ -62,7 +62,21 @@
 // Custom Properties
 .post-content a { color: #3498db }
 .post-content strong { font-weight: 600 }
-.post-content img { border-radius: .25rem }
+.post-content img {
+    border-radius: .25rem;
+    cursor: pointer;
+    width: 100%;
+    transition: all 0.5s ease;
+}
+
+.post-content img.full {
+    border-radius: 0;
+    width: 100vw;
+    max-width: 100vw;
+    padding: .5rem 0;
+    transform: translateX(calc((32rem/2) - 50vw));
+    transition: all 0.5s ease;
+}
 
 .icon svg { width: 16px }
 
@@ -84,6 +98,14 @@
 
 
 // Custom Media Queries
+@media (max-width: 34rem) {
+
+    .post-content img.full {
+        transform: translateX(-1rem);
+    }
+
+}
+
 @media (max-width: 60rem) {
 
     .site-page .sm-header-tagline { display: none }
