--- a/css/main.scss
+++ b/css/main.scss
@@ -59,9 +59,8 @@
 .contact-form textarea:focus { border: 2px solid #3498db }
 
 
-// Custom Properties
+// Post Properties
 .post-content a { color: #3498db }
-.post-content strong { font-weight: 600 }
 .post-content img {
     border-radius: .25rem;
     cursor: pointer;
