--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,7 +10,7 @@ layout: default
     <section class="lg-section center-block" style="max-width: 34rem">
 
     <h1 class="font-size-1 line-height-none pt3">{{ page.title }}</h1>
-    <div class="post-content">
+    <div class="page-content">
         {{ content }}
     </div>
 
