--- a/css/main.scss
+++ b/css/main.scss
@@ -60,7 +60,9 @@
 
 
 // Post Properties
-.post-content a { color: #3498db }
+.post-content a,
+.page-content a { color: #3498db }
+
 .post-content img {
     border-radius: .25rem;
     cursor: pointer;
@@ -76,8 +78,6 @@
     transform: translateX(calc((32rem/2) - 50vw));
     transition: all 0.5s ease;
 }
-
-.icon svg { width: 16px }
 
 .highlight {
     font-size: .75rem;
