--- a/css/main.scss
+++ b/css/main.scss
@@ -63,6 +63,8 @@
 .post-content a,
 .page-content a { color: #3498db }
 
+
+// Zoom
 .img-zoom {
     text-align: center;
     width: 100%;
@@ -72,13 +74,15 @@
     border-radius: .25rem;
     cursor: pointer;
     width: 100%;
-    max-width: 60rem;
+    transition: all 0.4s ease;
 }
 
-.zoom {
+.img-zoom.zoom img {
+    position: relative;
+    z-index: 2;
     width: 100vw;
     max-width: 100vw;
-    margin-left: calc((32rem/2) - 50vw);
+    margin-left: calc((32rem/2) - 50vw);   
 }
 
 .highlight {
@@ -101,18 +105,24 @@
 // Custom Media Queries
 @media (max-width: 34rem) {
 
-    .zoom { margin-left: -1rem }
+    .img-zoom.zoom img { margin-left: -1rem }
 
 }
 
 @media (max-width: 60rem) {
 
     .site-page .sm-header-tagline { display: none }
-    .zoom img { border-radius: 0 }
+    .img-zoom.zoom img { border-radius: 0 }
 
 }
 
 @media (min-width: 60rem) {
+
+    .img-zoom.zoom img {
+        width: 70vw;
+        max-width: 70vw;
+        margin-left: calc((32rem/2) - 35vw);   
+    }
 
     .lg-section { width: 34rem }
 
