--- a/css/main.scss
+++ b/css/main.scss
@@ -65,11 +65,6 @@
 
 
 // Zoom
-.img-zoom {
-    text-align: center;
-    width: 100%;
-}
-
 .img-zoom img {
     border-radius: .25rem;
     cursor: pointer;
@@ -78,8 +73,6 @@
 }
 
 .img-zoom.zoom img {
-    position: relative;
-    z-index: 2;
     width: 100vw;
     max-width: 100vw;
     margin-left: calc((32rem/2) - 50vw);   
@@ -119,9 +112,13 @@
 @media (min-width: 60rem) {
 
     .img-zoom.zoom img {
-        width: 70vw;
-        max-width: 70vw;
-        margin-left: calc((32rem/2) - 35vw);   
+        width: 74vw;
+        max-width: 74vw;
+        margin-left: calc((32rem/2) - 37vw);
+
+        width: 110vmin;
+        max-width: 110vmin;
+        margin-left: calc((32rem/2) - 55vmin);
     }
 
     .lg-section { width: 34rem }
