Nuke those inline styles.

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,7 +7,7 @@ layout: default
   {% include nav.html %}
 
   <article class="lg-article lg-height-full lg-align-middle pt3 px3 pb5">
-    <section class="lg-section center-block" style="max-width: 34rem">
+    <section class="lg-section section-max-width center-block">
 
     <h1 class="font-size-1 line-height-none pt3">{{ page.title }}</h1>
     <div class="page-content">
