--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,8 +6,8 @@ layout: default
 
   {% include nav.html %}
 
-  <article class="lg-article lg-height-full lg-align-middle pt3 px3 pb5">
-    <section class="lg-section section-max-width center-block">
+  <article class="lg-article lg-height-full lg-align-middle pt3 px4 pb7">
+    <section class="width-full center-block" style="max-width: 37rem">
 
     <h1 class="font-size-1 line-height-none pt3">{{ page.title }}</h1>
     <div class="page-content">
