--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -4,9 +4,9 @@ layout: default
 
 <article class="site-project lg-post lg-height-full" itemscope itemtype="http://schema.org/BlogPosting">
 
-  <header class="align-center color-white text-shadow-medium px3 py5" style="background: linear-gradient( rgba({{ page.color }}, 0.94), rgba({{ page.color }}, 0.94)), url({{ page.cover-image }}); background-size: cover; background-position: center center;">
+  <header class="align-center color-white text-shadow-medium px4 py6" style="background: linear-gradient( rgba({{ page.color }}, 0.94), rgba({{ page.color }}, 0.94)), url({{ page.cover-image }}); background-size: cover; background-position: center center;">
 
-      <a href="{{ site.baseurl }}/" class="lg-absolute l1 t1 sm-hide inline-block color-white dim-bg-black underline-none lowercase py1 px3 m2 br3">&larr; All Work</a>
+      <a href="{{ site.baseurl }}/" class="lg-absolute l1 t1 sm-hide font-size-5 inline-block color-white dim-bg-black underline-none lowercase py1 px3 m2 br3">&larr; All Work</a>
 
       <div onclick="window.history.back()" id="close-post" class="absolute t0 r0 hide line-height-none dim-color-white svg-shadow-medium p3 pointer">
           <svg viewBox="0 0 32 32" width="24" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="8%">
@@ -23,7 +23,7 @@ layout: default
 
   </header>
 
-  <section class="lg-section section-max-width center-block pt3 px3 pb5">
+  <section class="section-max-width width-full center-block pt3 px4 pb7">
 
     <div class="post-content" itemprop="articleBody">
       {{ content }}
