Added fullbleed class for sm breakpoint. Made life easier with an article side margin variable.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <article class="site-post lg-post lg-height-full" itemscope itemtype="http://schema.org/BlogPosting">
 
-  <header class="align-center color-white text-shadow-medium pt6 px3 pb4" style="background: linear-gradient( rgba({{ page.color }}, 0.8), rgba({{ page.color }}, 0.8)), url({{ page.cover-image }}); background-size: cover; background-position: center center;">
+  <header class="align-center color-white text-shadow-medium pt6 pb4 article-side-padding" style="background: linear-gradient( rgba({{ page.color }}, 0.8), rgba({{ page.color }}, 0.8)), url({{ page.cover-image }}); background-size: cover; background-position: center center;">
 
       <a href="{{ site.baseurl }}/articles/" class="lg-absolute l1 t1 sm-hide font-size-5 inline-block color-white dim-bg-white underline-none lowercase py1 px3 m2 br3">&larr; All Articles</a>
 
@@ -23,7 +23,7 @@ layout: default
 
   </header>
 
-  <section class="section-max-width width-full center-block pt3 px3 pb6">
+  <section class="section-max-width width-full center-block pt3 pb6 article-side-padding">
 
     <div class="post-content" itemprop="articleBody">
       {{ content }}
