--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -4,7 +4,7 @@ layout: default
 
 <article class="site-project lg-post lg-height-full" itemscope itemtype="http://schema.org/BlogPosting">
 
-  <header class="align-center color-white text-shadow-medium px3 py6" style="background: linear-gradient( rgba({{ page.color }}, 0.94), rgba({{ page.color }}, 0.94)), url({{ page.cover-image }}); background-size: cover; background-position: center center;">
+  <header class="align-center color-white text-shadow-medium py6 article-side-padding" style="background: linear-gradient( rgba({{ page.color }}, 0.94), rgba({{ page.color }}, 0.94)), url({{ page.cover-image }}); background-size: cover; background-position: center center;">
 
       <a href="{{ site.baseurl }}/" class="lg-absolute l1 t1 sm-hide font-size-5 inline-block color-white dim-bg-black underline-none lowercase py1 px3 m2 br3">&larr; All Work</a>
 
@@ -23,7 +23,7 @@ layout: default
 
   </header>
 
-  <section class="section-max-width width-full center-block pt3 px3 pb6">
+  <section class="section-max-width width-full center-block pt3 pb6 article-side-padding">
 
     <div class="post-content" itemprop="articleBody">
       {{ content }}
