--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,7 +6,7 @@ layout: default
 
   {% include nav.html %}
 
-  <article class="lg-article lg-height-full lg-align-middle pt3 px3 pb6">
+  <article class="lg-article lg-height-full lg-align-middle pt3 pb6 article-side-padding">
     <section class="section-max-width width-full center-block">
 
     <h1 class="font-size-1 line-height-none pt3">{{ page.title }}</h1>
