--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -4,7 +4,7 @@ layout: default
 
 <article class="site-project lg-post lg-height-full" itemscope itemtype="http://schema.org/BlogPosting">
 
-  <header class="align-center color-white text-shadow-medium py6 article-side-padding" style="background: linear-gradient( rgba({{ page.color }}, 0.94), rgba({{ page.color }}, 0.94)), url({{ page.cover-image }}); background-size: cover; background-position: center center;">
+  <header class="center-block color-white text-shadow-medium box-shadow-light pt6" style="background: rgb({{ page.color }});"">
 
       <a href="{{ site.baseurl }}/" class="lg-absolute l1 t1 sm-hide font-size-5 inline-block color-white dim-bg-black underline-none lowercase py1 px3 m2 br3">&larr; All Work</a>
 
@@ -15,11 +15,15 @@ layout: default
           </svg>
       </div>
 
-      <div class="center-block line-height-none pt3">
-        <h1 class="font-size-1" itemprop="name headline">{{ page.title }}</h1>
-        <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished" class="block font-size-6 line-height-title tracking-wide opacity-8 py2">{{ page.year }}</time>
-        <span class="font-size-5 line-height-title tracking-slight font-weight-5">{{ page.tagline }}</span>
+      <div class="center-block align-center line-height-none px3 pt4 pb3">
+          <h2 class="font-size-1">{{ page.title }}</h2>
+          <time class="block font-size-6 line-height-title tracking-wide opacity-8 py2">{{ page.year }}</time>
+          <span class="font-size-5 line-height-title tracking-slight font-weight-5">{{ page.tagline }}</span>
       </div>
+
+      {% if page.cover-image %}
+      <img src="{{ page.cover-image }}" width="450" height="400" class="center-block width-full no-select" style="max-width: 550px">
+      {% endif %}
 
   </header>
 
@@ -27,7 +31,7 @@ layout: default
     .post-content a { color: rgb({{ page.color }}) }
   </style>
 
-  <section class="section-max-width width-full center-block pt3 pb7 article-side-padding">
+  <section class="section-max-width width-full center-block pt4 pb7 article-side-padding">
 
     <div class="post-content" itemprop="articleBody">
       {{ content }}
