Fix article top padding for good. Needed adjusted on small screens.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@ layout: default
 
   </header>
 
-  <section class="section-max-width width-full center-block pt4 pb7 article-side-padding">
+  <section class="section-max-width width-full center-block pb7 article-top-padding article-side-padding">
 
     <div class="post-content" itemprop="articleBody">
       {{ content }}
