--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -4,7 +4,7 @@ layout: default
 
 <article class="site-project lg-post lg-height-full" itemscope itemtype="http://schema.org/BlogPosting">
 
-  <header class="center-block color-white text-shadow-medium box-shadow-light pt6" style="background: rgb({{ page.color }});"">
+  <header class="center-block color-white text-shadow-medium box-shadow-light pt5" style="background: rgb({{ page.color }});"">
 
       <a href="{{ site.baseurl }}/" class="lg-absolute l1 t1 sm-hide font-size-5 inline-block color-white dim-bg-black underline-none lowercase py1 px3 m2 br3">&larr; All Work</a>
 
@@ -31,7 +31,7 @@ layout: default
     .post-content a { color: rgb({{ page.color }}) }
   </style>
 
-  <section class="section-max-width width-full center-block pt4 pb7 article-side-padding">
+  <section class="section-max-width width-full center-block pb7 article-top-padding article-side-padding">
 
     <div class="post-content" itemprop="articleBody">
       {{ content }}
